app/grammar/HIPMLParser.ts
// Generated from HIPML.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { HIPMLListener } from "./HIPMLListener";

export class HIPMLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly METADATA_SECTION_NAME = 7;
	public static readonly ATTRIBUTES_SECTION_NAME = 8;
	public static readonly COVERAGE_SECTION_NAME = 9;
	public static readonly EXCLUSIONS_SECTION_NAME = 10;
	public static readonly CONDITIONS_SECTION_NAME = 11;
	public static readonly DEFINITIONS_SECTION_NAME = 12;
	public static readonly CONTACT_SECTION_NAME = 13;
	public static readonly METADATA_KEY = 14;
	public static readonly ATTRIBUTES_KEY_WITH_STRING_VALUES = 15;
	public static readonly ATTRIBUTES_KEY_WITH_DATE_VALUES = 16;
	public static readonly ATTRIBUTES_KEY_WITH_NUMBER_VALUES = 17;
	public static readonly COVERAGE_ITEM_LIMIT_KEY = 18;
	public static readonly COVERAGE_ITEM_CONDITION_KEY = 19;
	public static readonly EXCLUSIONS_ITEM_CONDITION_KEY = 20;
	public static readonly CONDITIONS_ITEM_KEY = 21;
	public static readonly VARIABLE = 22;
	public static readonly PROCEDURE = 23;
	public static readonly DIAGNOSIS = 24;
	public static readonly SERVICE = 25;
	public static readonly AMOUNT = 26;
	public static readonly SWITCH_PREFIX = 27;
	public static readonly GROUP_EXPR_STMT_PREFIX = 28;
	public static readonly SWITCH_DEFAULT_SUFFIX = 29;
	public static readonly ALL_ARE_TRUE = 30;
	public static readonly ALL_ARE_FALSE = 31;
	public static readonly AT_LEAST_ONE_IS_TRUE = 32;
	public static readonly AT_LEAST_ONE_IS_FALSE = 33;
	public static readonly IF = 34;
	public static readonly AND = 35;
	public static readonly OR = 36;
	public static readonly CONTAINS = 37;
	public static readonly DOES_NOT_CONTAIN = 38;
	public static readonly ADD = 39;
	public static readonly SUB = 40;
	public static readonly MUL = 41;
	public static readonly DIV = 42;
	public static readonly PER = 43;
	public static readonly LT = 44;
	public static readonly LTE = 45;
	public static readonly GT = 46;
	public static readonly GTE = 47;
	public static readonly NE = 48;
	public static readonly EQ = 49;
	public static readonly MIN = 50;
	public static readonly MAX = 51;
	public static readonly LOW_OF = 52;
	public static readonly HIGH_OF = 53;
	public static readonly DIFF_DAYS = 54;
	public static readonly DIFF_MONTHS = 55;
	public static readonly DIFF_YEARS = 56;
	public static readonly LIST_MATCH_ANY_ONE = 57;
	public static readonly LIST_MATCH_ALL = 58;
	public static readonly DATE = 59;
	public static readonly BOOLEAN = 60;
	public static readonly NUMBER = 61;
	public static readonly STRING = 62;
	public static readonly MULTILINE_STRING = 63;
	public static readonly HYPHEN = 64;
	public static readonly LINE_COMMENT = 65;
	public static readonly COMMENT = 66;
	public static readonly WS = 67;
	public static readonly RULE_policy = 0;
	public static readonly RULE_policySection = 1;
	public static readonly RULE_attributesSection = 2;
	public static readonly RULE_attributesBody = 3;
	public static readonly RULE_attribute = 4;
	public static readonly RULE_attributeString = 5;
	public static readonly RULE_attributeDate = 6;
	public static readonly RULE_attributeNumber = 7;
	public static readonly RULE_coverageSection = 8;
	public static readonly RULE_coverageBody = 9;
	public static readonly RULE_coverageItem = 10;
	public static readonly RULE_coverageItemName = 11;
	public static readonly RULE_coverageItemDetails = 12;
	public static readonly RULE_coverageItemLimit = 13;
	public static readonly RULE_coverageItemCondition = 14;
	public static readonly RULE_exclusionsSection = 15;
	public static readonly RULE_exclusionBody = 16;
	public static readonly RULE_exclusionItem = 17;
	public static readonly RULE_exclusionItemCondition = 18;
	public static readonly RULE_conditionsSection = 19;
	public static readonly RULE_conditionsBody = 20;
	public static readonly RULE_conditionsItem = 21;
	public static readonly RULE_definitionsSection = 22;
	public static readonly RULE_contactSection = 23;
	public static readonly RULE_switchStmt = 24;
	public static readonly RULE_switchExpr = 25;
	public static readonly RULE_switchDefaultExpr = 26;
	public static readonly RULE_booleanExpr = 27;
	public static readonly RULE_booleanGroupExprStmt = 28;
	public static readonly RULE_comparatorExpr = 29;
	public static readonly RULE_groupFnExpr = 30;
	public static readonly RULE_numberExpr = 31;
	public static readonly RULE_listOpExpr = 32;
	public static readonly RULE_singleValue = 33;
	public static readonly RULE_list = 34;
	public static readonly RULE_listExpr = 35;
	public static readonly RULE_dateExpr = 36;
	public static readonly RULE_variable = 37;
	public static readonly RULE_diagnosis = 38;
	public static readonly RULE_procedure = 39;
	public static readonly RULE_service = 40;
	public static readonly RULE_amount = 41;
	public static readonly RULE_date = 42;
	public static readonly RULE_number = 43;
	public static readonly RULE_string = 44;
	public static readonly RULE_bool = 45;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"policy", "policySection", "attributesSection", "attributesBody", "attribute",
		"attributeString", "attributeDate", "attributeNumber", "coverageSection",
		"coverageBody", "coverageItem", "coverageItemName", "coverageItemDetails",
		"coverageItemLimit", "coverageItemCondition", "exclusionsSection", "exclusionBody",
		"exclusionItem", "exclusionItemCondition", "conditionsSection", "conditionsBody",
		"conditionsItem", "definitionsSection", "contactSection", "switchStmt",
		"switchExpr", "switchDefaultExpr", "booleanExpr", "booleanGroupExprStmt",
		"comparatorExpr", "groupFnExpr", "numberExpr", "listOpExpr", "singleValue",
		"list", "listExpr", "dateExpr", "variable", "diagnosis", "procedure",
		"service", "amount", "date", "number", "string", "bool",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "':'", "','", "'('", "')'", "'['", "']'", "'Policy Metadata'",
		"'Policy Attributes'", "'Coverage'", "'Exclusions'", "'Conditions'", "'Definitions'",
		"'Contact'", undefined, undefined, undefined, undefined, undefined, "'Included only if'",
		"'Excluded unless'", undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, "'- '", undefined, undefined, undefined, undefined,
		undefined, "'if'", "'and'", "'or'", "'contains'", "'does not contain'",
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, "'any of'", "'all of'", undefined,
		undefined, undefined, undefined, undefined, "'-'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		"METADATA_SECTION_NAME", "ATTRIBUTES_SECTION_NAME", "COVERAGE_SECTION_NAME",
		"EXCLUSIONS_SECTION_NAME", "CONDITIONS_SECTION_NAME", "DEFINITIONS_SECTION_NAME",
		"CONTACT_SECTION_NAME", "METADATA_KEY", "ATTRIBUTES_KEY_WITH_STRING_VALUES",
		"ATTRIBUTES_KEY_WITH_DATE_VALUES", "ATTRIBUTES_KEY_WITH_NUMBER_VALUES",
		"COVERAGE_ITEM_LIMIT_KEY", "COVERAGE_ITEM_CONDITION_KEY", "EXCLUSIONS_ITEM_CONDITION_KEY",
		"CONDITIONS_ITEM_KEY", "VARIABLE", "PROCEDURE", "DIAGNOSIS", "SERVICE",
		"AMOUNT", "SWITCH_PREFIX", "GROUP_EXPR_STMT_PREFIX", "SWITCH_DEFAULT_SUFFIX",
		"ALL_ARE_TRUE", "ALL_ARE_FALSE", "AT_LEAST_ONE_IS_TRUE", "AT_LEAST_ONE_IS_FALSE",
		"IF", "AND", "OR", "CONTAINS", "DOES_NOT_CONTAIN", "ADD", "SUB", "MUL",
		"DIV", "PER", "LT", "LTE", "GT", "GTE", "NE", "EQ", "MIN", "MAX", "LOW_OF",
		"HIGH_OF", "DIFF_DAYS", "DIFF_MONTHS", "DIFF_YEARS", "LIST_MATCH_ANY_ONE",
		"LIST_MATCH_ALL", "DATE", "BOOLEAN", "NUMBER", "STRING", "MULTILINE_STRING",
		"HYPHEN", "LINE_COMMENT", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(HIPMLParser._LITERAL_NAMES, HIPMLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return HIPMLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "HIPML.g4"; }

	// @Override
	public get ruleNames(): string[] { return HIPMLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return HIPMLParser._serializedATN; }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(HIPMLParser._ATN, this);
  }
	// @RuleVersion(0)
	public policy(): PolicyContext {
		let _localctx: PolicyContext = new PolicyContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, HIPMLParser.RULE_policy);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 92;
				this.policySection();
				}
				}
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HIPMLParser.ATTRIBUTES_SECTION_NAME) | (1 << HIPMLParser.COVERAGE_SECTION_NAME) | (1 << HIPMLParser.EXCLUSIONS_SECTION_NAME) | (1 << HIPMLParser.CONDITIONS_SECTION_NAME) | (1 << HIPMLParser.DEFINITIONS_SECTION_NAME) | (1 << HIPMLParser.CONTACT_SECTION_NAME))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public policySection(): PolicySectionContext {
		let _localctx: PolicySectionContext = new PolicySectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, HIPMLParser.RULE_policySection);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HIPMLParser.ATTRIBUTES_SECTION_NAME:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 97;
				this.attributesSection();
				}
				break;
			case HIPMLParser.COVERAGE_SECTION_NAME:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 98;
				this.coverageSection();
				}
				break;
			case HIPMLParser.EXCLUSIONS_SECTION_NAME:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 99;
				this.exclusionsSection();
				}
				break;
			case HIPMLParser.CONDITIONS_SECTION_NAME:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 100;
				this.conditionsSection();
				}
				break;
			case HIPMLParser.DEFINITIONS_SECTION_NAME:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 101;
				this.definitionsSection();
				}
				break;
			case HIPMLParser.CONTACT_SECTION_NAME:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 102;
				this.contactSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributesSection(): AttributesSectionContext {
		let _localctx: AttributesSectionContext = new AttributesSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, HIPMLParser.RULE_attributesSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.match(HIPMLParser.ATTRIBUTES_SECTION_NAME);
			this.state = 106;
			this.match(HIPMLParser.T__0);
			this.state = 107;
			this.attributesBody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributesBody(): AttributesBodyContext {
		let _localctx: AttributesBodyContext = new AttributesBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, HIPMLParser.RULE_attributesBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 109;
				this.attribute();
				}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HIPMLParser.ATTRIBUTES_KEY_WITH_STRING_VALUES) | (1 << HIPMLParser.ATTRIBUTES_KEY_WITH_DATE_VALUES) | (1 << HIPMLParser.ATTRIBUTES_KEY_WITH_NUMBER_VALUES))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let _localctx: AttributeContext = new AttributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, HIPMLParser.RULE_attribute);
		try {
			this.state = 117;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HIPMLParser.ATTRIBUTES_KEY_WITH_STRING_VALUES:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.attributeString();
				}
				break;
			case HIPMLParser.ATTRIBUTES_KEY_WITH_DATE_VALUES:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.attributeDate();
				}
				break;
			case HIPMLParser.ATTRIBUTES_KEY_WITH_NUMBER_VALUES:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				this.attributeNumber();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeString(): AttributeStringContext {
		let _localctx: AttributeStringContext = new AttributeStringContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, HIPMLParser.RULE_attributeString);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_STRING_VALUES);
			this.state = 120;
			this.match(HIPMLParser.T__0);
			this.state = 121;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeDate(): AttributeDateContext {
		let _localctx: AttributeDateContext = new AttributeDateContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, HIPMLParser.RULE_attributeDate);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_DATE_VALUES);
			this.state = 124;
			this.match(HIPMLParser.T__0);
			this.state = 125;
			this.date();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeNumber(): AttributeNumberContext {
		let _localctx: AttributeNumberContext = new AttributeNumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, HIPMLParser.RULE_attributeNumber);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(HIPMLParser.ATTRIBUTES_KEY_WITH_NUMBER_VALUES);
			this.state = 128;
			this.match(HIPMLParser.T__0);
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HIPMLParser.T__2:
			case HIPMLParser.VARIABLE:
			case HIPMLParser.AMOUNT:
			case HIPMLParser.MIN:
			case HIPMLParser.MAX:
			case HIPMLParser.LOW_OF:
			case HIPMLParser.HIGH_OF:
			case HIPMLParser.DIFF_DAYS:
			case HIPMLParser.DIFF_MONTHS:
			case HIPMLParser.DIFF_YEARS:
			case HIPMLParser.NUMBER:
				{
				this.state = 129;
				this.numberExpr(0);
				}
				break;
			case HIPMLParser.SWITCH_PREFIX:
				{
				this.state = 130;
				this.switchStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public coverageSection(): CoverageSectionContext {
		let _localctx: CoverageSectionContext = new CoverageSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, HIPMLParser.RULE_coverageSection);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(HIPMLParser.COVERAGE_SECTION_NAME);
			this.state = 134;
			this.match(HIPMLParser.T__0);
			this.state = 135;
			this.coverageBody();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public coverageBody(): CoverageBodyContext {
		let _localctx: CoverageBodyContext = new CoverageBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, HIPMLParser.RULE_coverageBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 137;
				this.coverageItem();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HIPMLParser.PROCEDURE) | (1 << HIPMLParser.DIAGNOSIS) | (1 << HIPMLParser.SERVICE))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public coverageItem(): CoverageItemContext {
		let _localctx: CoverageItemContext = new CoverageItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, HIPMLParser.RULE_coverageItem);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			this.coverageItemName();
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === HIPMLParser.T__1) {
				{
				{
				this.state = 143;
				this.match(HIPMLParser.T__1);
				this.state = 144;
				this.coverageItemName();
				}
				}
				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 152;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HIPMLParser.T__0) {
				{
				this.state = 150;
				this.match(HIPMLParser.T__0);
				this.state = 151;
				this.coverageItemDetails();
				}
			}
